--- a/stressboard/templates/stressboard/base.html
+++ b/stressboard/templates/stressboard/base.html
@@ -1,21 +1,27 @@
-
-{% comment %}
-As the developer of this package, don't place anything here if you can help it
-since this allows developers to have interoperability between your template
-structure and their own.
-
-Example: Developer melding the 2SoD pattern to fit inside with another pattern::
-
-    {% extends "base.html" %}
-    {% load static %}
-
-    <!-- Their site uses old school block layout -->
-    {% block extra_js %}
-
-        <!-- Your package using 2SoD block layout -->
-        {% block javascript %}
-            <script src="{% static 'js/ninja.js' %}" type="text/javascript"></script>
-        {% endblock javascript %}
-
-    {% endblock extra_js %}
-{% endcomment %}
+<!DOCTYPE html>
+{% load static from staticfiles %}
+{% load url from future %}
+{% load i18n %}
+<html>
+  <head>
+    <title>{% block title %}{% endblock title %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="{% static 'css/screen.css' %}" rel="stylesheet">
+  </head>
+  <body>
+    <div class="container">
+      {% if messages %}
+        {% for message in messages %}
+          <div class="alert alert-{{ message.tags }}">
+            <button class="close" data-dismiss="alert">&times;</button>
+            {{ message }}
+          </div>
+        {% endfor %}
+      {% endif %}
+    </div>
+    {% block body %}
+    {% endblock body %}
+    {% block scripts %}
+    {% endblock scripts %}
+  </body>
+</html>
